# deer-flow-by-cc

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_fr.md  README_zh.md  config.example.yaml  deer-flow-deep-dive.md  deer-flow-embed-proposal.md  deer-flow-wechat.md  extensions_config.example.json  identity-cookies.txt  mise.toml
backend/: CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260421_0001_identity_schema.py  20260421_0002_api_token_unique.py  20260421_0003_audit_grants.py  20260425_0004_user_password_hash.py  20260425_0005_skill_registry_org_api_keys.py  20260429_0006_registration_codes.py
backend/docs/: ARCHITECTURE.md  HARNESS_APP_SPLIT.md  MEMORY_SETTINGS_REVIEW.md
backend/tests/: test_agent_skill_deps.py  test_agents_router.py  test_aio_sandbox_provider.py  test_artifacts_router.py  test_channel_file_attachments.py  test_channels.py  test_client.py  test_client_e2e.py  test_lead_agent_prompt.py  test_llm_error_silenced_audit.py  test_loop_detection_middleware.py  test_main_loop_helper.py  test_memory_updater.py  test_memory_updater_main_loop.py  test_models_router_crud.py  test_paths_tenant_aware.py  test_present_file_tool_core_logic.py  test_request_scope.py  test_skill_manifest.py  test_subagent_executor.py  test_subagent_executor_main_loop.py  test_subagent_prompt_security.py  test_summarization_middleware.py  test_thread_data_middleware_tenant.py  test_threads_router.py  test_uploads_middleware_core_logic.py  test_uploads_router.py
(+337 files in other folders)
